# misis2024f-24-01-sainov-r-d

./: CMakeLists.txt  codeforces.id  status.md
prj.codeforces/: 0004a.cpp  0009a.cpp  0129a.cpp  0136a.cpp  0158a.cpp  0263a.cpp  0271A.cpp  0271a.cpp  0276a.cpp  0336a.cpp  0339b.cpp  0344a.cpp  0371b.cpp  0384a.cpp  0456a.cpp  0456b.cpp  0617a.cpp  0723a.cpp  0734b.cpp  0755a.cpp  0755b.cpp  0875a.cpp  0876a.cpp  0876b.cpp  0898a.cpp  0898b.cpp  0915a.cpp  0935a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1058a.cpp  1058b.cpp  1230b.cpp  1330a.cpp  1335a.cpp  1352a.cpp  1409a.cpp  1433a.cpp  1512b.cpp  (+17 more)
prj.lab/: CMakeLists.txt
prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp  arrayd.h  arrayd.hpp
prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp  arrayt.h  arrayt.hpp
prj.lab/complex/: complex.cpp  complex.h  complex.hpp
prj.lab/queuea/: CMakeLists.txt  queuea.cpp  queuea.h  queuea.hpp
prj.lab/queuel/: queuel.cpp  queuel.h  queuel.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.lab/stacka/: stacka.cpp  stacka.h  stacka.hpp
prj.lab/stackl/: CMakeLists.txt  stackl.cpp  stackl.h  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_doctest.cpp  arrayt_doctest.cpp  complex_doctest.cpp  complex_test.cpp  queuea_doctest.cpp  rational_doctest.cpp  rational_test.cpp  stackl_doctest.cpp
