set(CMAKE_CXX_STANDARD 20)

add_executable(0004a 0004a.cpp)  
add_executable(0263a 0263a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1230b 1230b.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1409a 1409a.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1878a 1878a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0336a 0336a.cpp)
add_executable(0129a 0129a.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1873d 1873d.cpp)
add_executable(1873c 1873c.cpp)
add_executable(0339b 0339b.cpp)
add_executable(2007b 2007b.cpp)
add_executable(0875a 0875a.cpp)
add_executable(0876a 0876a.cpp)
add_executable(0876b 0876b.cpp)
add_executable(0456a 0456a.cpp)
add_executable(0456b 0456b.cpp)
add_executable(0755a 0755a.cpp)
add_executable(0755b 0755b.cpp)
add_executable(0384a 0384a.cpp)
add_executable(0344a 0344a.cpp)
add_executable(1433a 1433a.cpp)
add_executable(0898b 0898b.cpp)
add_executable(0898a 0898a.cpp)
add_executable(1058a 1058a.cpp)
add_executable(1058b 1058b.cpp)
add_executable(1335a 1335a.cpp)
add_executable(0009a 0009a.cpp)
add_executable(0915a 0915a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(1692c 1692c.cpp)
add_executable(0935a 0935a.cpp)
add_executable(0935b 0935b.cpp)
add_executable(2032a 2032a.cpp)
add_executable(2036a 2036a.cpp)
add_executable(2036b 2036b.cpp)
add_executable(1821a 1821a.cpp)
add_executable(0734b 0734b.cpp)
add_executable(0723a 0723a.cpp)
add_executable(1845b 1845b.cpp)
add_executable(0371b 0371b.cpp)
add_executable(0136a 0136a.cpp)
add_executable(1512b 1512b.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1671a 1671a.cpp)
add_executable(1678a 1678a.cpp)